--- a/hello-world/samconfig.toml
+++ b/hello-world/samconfig.toml
@@ -6,5 +6,5 @@ stack_name = "hello-world"
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-1v6hkwj0j1wrr"
 s3_prefix = "hello-world"
 region = "us-west-2"
-confirm_changeset = false
+confirm_changeset = true
 capabilities = "CAPABILITY_IAM"
