Fix auth flow, should be user/password not SRP.

--- a/src/template.yaml
+++ b/src/template.yaml
@@ -107,7 +107,8 @@ Resources:
     Properties:
       ClientName: 'tapedeck-web-client'
       GenerateSecret: false
-      ExplicitAuthFlows: ['ALLOW_USER_SRP_AUTH', 'ALLOW_REFRESH_TOKEN_AUTH']
+      ExplicitAuthFlows:
+        ['ALLOW_USER_PASSWORD_AUTH', 'ALLOW_REFRESH_TOKEN_AUTH']
       PreventUserExistenceErrors: 'ENABLED'
       UserPoolId: !Ref UserPool
 # Outputs:
