--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "debug": "^4.3.1"
   },
   "devDependencies": {
-    "@types/node": "^14.14.9",
+    "@aws-sdk/client-cognito-identity-provider": "^3.9.0",
     "@types/mocha": "8.0.4",
+    "@types/node": "^14.14.9",
+    "axios": "^0.21.1",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "mocha": "^8.3.0",
+    "generate-password": "^1.6.0",
+    "mocha": "^8.3.2",
     "prettier": "^2.2.0",
     "typescript": "4.0.3"
   },
