--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "generate-password": "^1.6.0",
     "mocha": "^8.3.2",
     "prettier": "^2.2.0",
-    "typescript": "4.0.3"
+    "toml": "^3.0.0",
+    "typescript": "4.0.3",
+    "yaml": "^1.10.2"
   },
   "eslintConfig": {
     "root": true,
