--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "debug": "^4.3.1"
   },
   "devDependencies": {
+    "@aws-sdk/client-api-gateway": "^3.9.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.9.0",
     "@types/mocha": "8.0.4",
     "@types/node": "^14.14.9",
